HelloUltraviolet/Fixtures/AcceptedProjects/CrossAssemblyImplementation/Source/ExternalContracts/Contracts.uv
//! Dependency assembly declaring a class implemented from another assembly.

public class ExternalRequiredClass {
    public required_value: i32
}
