HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordFieldVisibilityViolation/Source/Main.uv
//! Rejected record specimen for a field whose visibility exceeds its record visibility.

internal record RecordVisibilityPayload {
    public value: i32
}
